--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -20,8 +20,8 @@
     </div>
 
     <!-- found-items should be implemented as a component -->
-    <found-items items="list.found" on-remove="list.removeItem(index)"></found-items>
+    <found-items items="list.found"></found-items>
   </div>
-
+  <!-- on-remove="list.removeItem(index)" -->
 </body>
 </html>
