--- a/module3-solution/loader/itemsloaderindicator.template.html
+++ b/module3-solution/loader/itemsloaderindicator.template.html
@@ -1,6 +1,6 @@
 <div class="loader">
     <ol>
-        <li ng-repeat="item in Items">
+        <li ng-repeat="item in items">
           {{ item.quantity }} of {{ item.name }}
           <!-- <button ng-click="list.onRemove({index: $index});">Remove Item</button> -->
         </li>
