--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -18,15 +18,9 @@
     <div class="form-group narrow-button">
       <button class="btn btn-primary" ng-click="list.findItems();">Narrow It Down For Me!</button>
     </div>
-    <ol>
-      <li ng-repeat="item in list.found">
-        {{ item.quantity }} of {{ item.name }}
-        <!-- <button ng-click="list.onRemove({index: $index});">Remove Item</button> -->
-      </li>
-    </ol>
+   
     <!-- found-items should be implemented as a component -->
-    <found-items items="list.found"></found-items>
+    <found-items items="list.found" on-remove="list.removeItem(index)" ng-class="loader"></found-items>
   </div>
-  <!-- on-remove="list.removeItem(index)" -->
 </body>
 </html>
