--- a/module3-solution/foundItemstemplate.html
+++ b/module3-solution/foundItemstemplate.html
@@ -1,8 +1,17 @@
 <div>
-    <ol>
-        <li ng-repeat="item in list.items">
-            {{ item.quantity }} of {{ item.name }}
-            <button ng-click="list.onRemove({index: $index});">Remove Item</button>
-        </li>
-    </ol>
+    <table ng-show="list.items.length > 0">
+        <th>Name</th>
+        <th>Short Name</th>
+        <th>Description</th>
+        <th></th>
+        <tr ng-repeat="item in list.items">
+            <td>{{item.name}}</td>
+            <td>{{item.short_name}}</td>
+            <td>{{item.description}}</td>
+            <td>
+                <button ng-click="list.onRemove({index: $index});">Don't want this one!</button>
+            </td>
+        </tr>
+    </table>
+<p ng-hide="list.items.length > 0"></p>
 </div>
