--- a/module3-solution/foundItemstemplate.html
+++ b/module3-solution/foundItemstemplate.html
@@ -1,17 +1,28 @@
 <div>
     <table ng-show="list.items.length > 0">
-        <th>Name</th>
-        <th>Short Name</th>
-        <th>Description</th>
-        <th></th>
-        <tr ng-repeat="item in list.items">
-            <td>{{item.name}}</td>
-            <td>{{item.short_name}}</td>
-            <td>{{item.description}}</td>
-            <td>
-                <button ng-click="list.onRemove({index: $index});">Don't want this one!</button>
-            </td>
-        </tr>
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Short Name</th>
+                <th>Description</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tfoot>
+            <tr>
+                <td colspan="4"></td>
+            </tr>
+        </tfoot>
+        <tbody>
+            <tr ng-repeat="item in list.items">
+                <td>{{item.name}}</td>
+                <td>{{item.short_name}}</td>
+                <td>{{item.description}}</td>
+                <td>
+                    <button ng-click="list.onRemove({index: $index});">Don't want this one!</button>
+                </td>
+            </tr>
+        </tbody>
     </table>
-<p ng-hide="list.items.length > 0"></p>
+    <p ng-hide="list.items.length > 0">Nothing found</p>
 </div>
