--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -18,9 +18,10 @@
     <div class="form-group narrow-button">
       <button class="btn btn-primary" ng-click="list.findItems();">Narrow It Down For Me!</button>
     </div>
-   
-    <!-- found-items should be implemented as a component -->
-    <found-items items="list.found" on-remove="list.removeItem(index)"></found-items>
+   <div class="blueTable">
+      <!-- found-items should be implemented as a component -->
+     <found-items items="list.found" on-remove="list.removeItem"></found-items>
+   </div>    
   </div>
 </body>
 </html>
