--- a/module3-solution/foundItemstemplate.html
+++ b/module3-solution/foundItemstemplate.html
@@ -1,5 +1,5 @@
 <div>
-    <table ng-show="list.items.length > 0" ng-class="blueTable">
+    <table class="blueTable" ng-show="list.items.length > 0">
         <thead>
             <tr>
                 <th>Name</th>
