--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -22,7 +22,7 @@
     <br/>
     <br/>
           <!-- found-items should be implemented as a component -->
-     <found-items items="list.found" on-remove="list.removeItem"></found-items>
+     <found-items items="list.found" on-remove="list.removeItem(index)"></found-items>
     
   </div>
 </body>
